syntax = "proto3";
package content;
import "content/content.model.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "empty/empty.proto";
import "response/response.proto";
import "utils/patch/go.proto";

option go_package = "github.com/actliboy/hoper/server/go/mod/protobuf/content";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0"
  }
};

service TestService {

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
		description: "测试相关接口"
    };


    rpc GC(GCReq) returns(empty.Empty){
        option (google.api.http) = {
            get: "/api/v1/gc/{address}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags:["测试相关接口","v1.0.0","test"]
            summary : "测试接口"
            description : "根据地址取值测试该值是否被回收"
        };
    }

    rpc Register(empty.Empty) returns(empty.Empty){
        option (google.api.http) = {
            get: "/api/v1/register"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags:["测试相关接口","v1.0.0","test"]
            summary : "服务注册"
            description : "服务注册测试接口"
        };
    }

    rpc Restart(empty.Empty) returns(empty.Empty) {
        option (google.api.http) = {
            get: "/api/v1/restart"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags:["测试相关接口","v1.0.0","test"]
            summary : "重启"
            description : "重启测试接口"
        };
    }

    rpc Array(ArrayReq) returns(empty.Empty) {
        option (google.api.http) = {
            post: "/api/v1/array"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags:["测试相关接口","v1.0.0","test"]
            summary : "数组参数测试"
            description : "数组参数测试接口"
        };
    }

}

message GCReq {
    int64 address = 1;
}

message ArrayReq {
    repeated ID Ids = 1;
}

message ID {
    repeated uint64 Ids = 1;
}

message OneOf{
    oneof Req{
        string name =1;
        uint64 id = 2;
    }
}